# AEYE

./: README.md  appspec.yml
AEYE_AI/app/: boot_loader.py  database.py  database_models.py  main.py  pyproject.toml  requirementes.txt  settings.py
AEYE_AI/app/AEYE/: boot_loader.py  config.py  inference.py  logger.py  process.py
AEYE_AI/app/AEYE/AI/: inference.py  loader.py  registry.py
AEYE_AI/app/AEYE/application/: boot_loader.py  config.py  logger.py  process.py  registry.py
AEYE_AI/app/AEYE/router/: health_check.py  http_1_1.py
AEYE_AI/app/AEYE_langchain/: database.py  insert.py  langchain.py  model.py  query.py  search.py
AEYE_AI/app/AEYE_langchain/application/: database.py  insert.py  langchain.py  logger.py  model.py  preprocess.py  prompt.py  retrieve.py  search.py
AEYE_AI/app/AEYE_langchain/domain/: chat.py  insert.py
AEYE_AI/app/api/v1/: health.py  main.py
AEYE_AI/app/config/: deploy.yaml  develop.yaml
AEYE_AI/app/inference/application/: parser.py
AEYE_AI/app/inference/domain/: infer_result.py  request.py  result.py
AEYE_AI/app/migrations/: env.py
AEYE_AI/app/migrations/versions/: 2025_10_03_1436-bd36fec948ad_add_user_table.py  2025_10_03_1447-598313f60856_add_user_table.py  2025_10_18_1706-80252901a9ef_add_inference_table.py  2025_10_18_1717-eb648dda54ea_add_inference_table.py  2025_10_18_1718-9144f3e04467_add_inference_table.py  2025_10_18_1719-3125142c03fb_add_inference_table.py  2025_10_18_1720-c278d067175b_add_inference_table.py  2025_10_20_0243-bda2b23781fd_add_request_table.py  (+1 more)
AEYE_AI/app/routers/v1/: check_result.py  health.py  (+3 more)
(+261 files in other folders)
